--- a/.github/workflows/fingerprint.yaml
+++ b/.github/workflows/fingerprint.yaml
@@ -19,8 +19,8 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install dependencies
-      run: pip install -r requirements.txt
+    # - name: Install dependencies
+    #   run: pip install -r requirements.txt
 
     - name: Generate Fingerprint
       run: python scripts/fingerprint_generator.py . --exclude README.md "*.png" "*.jpg"
