--- a/.github/workflows/fingerprint.yaml
+++ b/.github/workflows/fingerprint.yaml
@@ -20,7 +20,7 @@ jobs:
         python-version: '3.10'
 
     - name: Install Dependencies
-      run: pip install -r requirements.txt
+      run: pip install -r scripts/requirements.txt
 
     - name: Generate Fingerprint
       run: |
